SeawolfGrammarParser.py
# Generated from /Users/mukul/github/sodium/SeawolfGrammar.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class SeawolfGrammarParser ( Parser ):

    grammarFileName = "SeawolfGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'/'", "'%'", "'**'", "'//'", "'+'", 
                     "'-'", "','", "';'", "'='", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'<>'", "'not'", "'and'", "'or'", "'in'", "'{'", 
                     "'}'", "'('", "')'", "'['", "']'", "'print'", "'if'", 
                     "'else'", "'while'" ]

    symbolicNames = [ "<INVALID>", "MUL", "DIV", "MOD", "EXP", "FLRDIV", 
                      "ADD", "SUB", "COMMA", "SEMICOL", "ASSIGN", "LS", 
                      "GT", "LE", "GE", "EQL", "NE", "NOT", "AND", "OR", 
                      "IN", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "SQLPAREN", 
                      "SQRPAREN", "PRINT", "IF", "ELSE", "WHILE", "ID", 
                      "INT", "REAL", "STRING", "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_code_block = 1
    RULE_stat = 2
    RULE_while_statement = 3
    RULE_if_statement = 4
    RULE_condition_block = 5
    RULE_cond_stat_block = 6
    RULE_braced_statement = 7
    RULE_expr = 8
    RULE_listid = 9
    RULE_list_index = 10
    RULE_listexpr = 11
    RULE_list_ = 12
    RULE_empty_list = 13

    ruleNames =  [ "prog", "code_block", "stat", "while_statement", "if_statement", 
                   "condition_block", "cond_stat_block", "braced_statement", 
                   "expr", "listid", "list_index", "listexpr", "list_", 
                   "empty_list" ]

    EOF = Token.EOF
    MUL=1
    DIV=2
    MOD=3
    EXP=4
    FLRDIV=5
    ADD=6
    SUB=7
    COMMA=8
    SEMICOL=9
    ASSIGN=10
    LS=11
    GT=12
    LE=13
    GE=14
    EQL=15
    NE=16
    NOT=17
    AND=18
    OR=19
    IN=20
    LBRACE=21
    RBRACE=22
    LPAREN=23
    RPAREN=24
    SQLPAREN=25
    SQRPAREN=26
    PRINT=27
    IF=28
    ELSE=29
    WHILE=30
    ID=31
    INT=32
    REAL=33
    STRING=34
    NEWLINE=35
    WS=36

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def code_block(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.Code_blockContext,0)


        def EOF(self):
            return self.getToken(SeawolfGrammarParser.EOF, 0)

        def getRuleIndex(self):
            return SeawolfGrammarParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SeawolfGrammarParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.code_block()
            self.state = 30
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 29
                self.match(SeawolfGrammarParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Code_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfGrammarParser.StatContext)
            else:
                return self.getTypedRuleContext(SeawolfGrammarParser.StatContext,i)


        def getRuleIndex(self):
            return SeawolfGrammarParser.RULE_code_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode_block" ):
                return visitor.visitCode_block(self)
            else:
                return visitor.visitChildren(self)




    def code_block(self):

        localctx = SeawolfGrammarParser.Code_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_code_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SeawolfGrammarParser.LBRACE) | (1 << SeawolfGrammarParser.PRINT) | (1 << SeawolfGrammarParser.IF) | (1 << SeawolfGrammarParser.WHILE) | (1 << SeawolfGrammarParser.ID) | (1 << SeawolfGrammarParser.NEWLINE))) != 0):
                self.state = 32
                self.stat()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SeawolfGrammarParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfstatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_statement(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.If_statementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstat" ):
                return visitor.visitIfstat(self)
            else:
                return visitor.visitChildren(self)


    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(SeawolfGrammarParser.NEWLINE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlank" ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class WhilestatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def while_statement(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.While_statementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhilestat" ):
                return visitor.visitWhilestat(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(SeawolfGrammarParser.PRINT, 0)
        def LPAREN(self):
            return self.getToken(SeawolfGrammarParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(SeawolfGrammarParser.RPAREN, 0)
        def SEMICOL(self):
            return self.getToken(SeawolfGrammarParser.SEMICOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ASSIGN(self):
            return self.getToken(SeawolfGrammarParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,0)

        def SEMICOL(self):
            return self.getToken(SeawolfGrammarParser.SEMICOL, 0)
        def ID(self):
            return self.getToken(SeawolfGrammarParser.ID, 0)
        def listid(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.ListidContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)


    class BlockstatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def braced_statement(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.Braced_statementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockstat" ):
                return visitor.visitBlockstat(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = SeawolfGrammarParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SeawolfGrammarParser.PRINT]:
                localctx = SeawolfGrammarParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.match(SeawolfGrammarParser.PRINT)
                self.state = 39
                self.match(SeawolfGrammarParser.LPAREN)
                self.state = 40
                self.expr(0)
                self.state = 41
                self.match(SeawolfGrammarParser.RPAREN)
                self.state = 42
                self.match(SeawolfGrammarParser.SEMICOL)
                pass
            elif token in [SeawolfGrammarParser.ID]:
                localctx = SeawolfGrammarParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 44
                    self.match(SeawolfGrammarParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 45
                    self.listid()
                    pass


                self.state = 48
                self.match(SeawolfGrammarParser.ASSIGN)
                self.state = 49
                self.expr(0)
                self.state = 50
                self.match(SeawolfGrammarParser.SEMICOL)
                pass
            elif token in [SeawolfGrammarParser.IF]:
                localctx = SeawolfGrammarParser.IfstatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.if_statement()
                pass
            elif token in [SeawolfGrammarParser.WHILE]:
                localctx = SeawolfGrammarParser.WhilestatContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.while_statement()
                pass
            elif token in [SeawolfGrammarParser.LBRACE]:
                localctx = SeawolfGrammarParser.BlockstatContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.braced_statement()
                pass
            elif token in [SeawolfGrammarParser.NEWLINE]:
                localctx = SeawolfGrammarParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 55
                self.match(SeawolfGrammarParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SeawolfGrammarParser.WHILE, 0)

        def condition_block(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.Condition_blockContext,0)


        def getRuleIndex(self):
            return SeawolfGrammarParser.RULE_while_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_statement" ):
                return visitor.visitWhile_statement(self)
            else:
                return visitor.visitChildren(self)




    def while_statement(self):

        localctx = SeawolfGrammarParser.While_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_while_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(SeawolfGrammarParser.WHILE)
            self.state = 59
            self.condition_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(SeawolfGrammarParser.IF)
            else:
                return self.getToken(SeawolfGrammarParser.IF, i)

        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfGrammarParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(SeawolfGrammarParser.Condition_blockContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(SeawolfGrammarParser.ELSE)
            else:
                return self.getToken(SeawolfGrammarParser.ELSE, i)

        def cond_stat_block(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.Cond_stat_blockContext,0)


        def getRuleIndex(self):
            return SeawolfGrammarParser.RULE_if_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = SeawolfGrammarParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(SeawolfGrammarParser.IF)
            self.state = 62
            self.condition_block()
            self.state = 68
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 63
                    self.match(SeawolfGrammarParser.ELSE)
                    self.state = 64
                    self.match(SeawolfGrammarParser.IF)
                    self.state = 65
                    self.condition_block() 
                self.state = 70
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 71
                self.match(SeawolfGrammarParser.ELSE)
                self.state = 72
                self.cond_stat_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Condition_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(SeawolfGrammarParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(SeawolfGrammarParser.RPAREN, 0)

        def cond_stat_block(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.Cond_stat_blockContext,0)


        def getRuleIndex(self):
            return SeawolfGrammarParser.RULE_condition_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_block" ):
                return visitor.visitCondition_block(self)
            else:
                return visitor.visitChildren(self)




    def condition_block(self):

        localctx = SeawolfGrammarParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(SeawolfGrammarParser.LPAREN)
            self.state = 76
            self.expr(0)
            self.state = 77
            self.match(SeawolfGrammarParser.RPAREN)
            self.state = 78
            self.cond_stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cond_stat_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def braced_statement(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.Braced_statementContext,0)


        def stat(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.StatContext,0)


        def getRuleIndex(self):
            return SeawolfGrammarParser.RULE_cond_stat_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_stat_block" ):
                return visitor.visitCond_stat_block(self)
            else:
                return visitor.visitChildren(self)




    def cond_stat_block(self):

        localctx = SeawolfGrammarParser.Cond_stat_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cond_stat_block)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.braced_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Braced_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(SeawolfGrammarParser.LBRACE, 0)

        def code_block(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.Code_blockContext,0)


        def RBRACE(self):
            return self.getToken(SeawolfGrammarParser.RBRACE, 0)

        def getRuleIndex(self):
            return SeawolfGrammarParser.RULE_braced_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBraced_statement" ):
                return visitor.visitBraced_statement(self)
            else:
                return visitor.visitChildren(self)




    def braced_statement(self):

        localctx = SeawolfGrammarParser.Braced_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_braced_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(SeawolfGrammarParser.LBRACE)
            self.state = 85
            self.code_block()
            self.state = 86
            self.match(SeawolfGrammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SeawolfGrammarParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(SeawolfGrammarParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(SeawolfGrammarParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class InoperationContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,i)

        def IN(self):
            return self.getToken(SeawolfGrammarParser.IN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInoperation" ):
                return visitor.visitInoperation(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(SeawolfGrammarParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class MulDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,i)

        def MUL(self):
            return self.getToken(SeawolfGrammarParser.MUL, 0)
        def DIV(self):
            return self.getToken(SeawolfGrammarParser.DIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDiv" ):
                return visitor.visitMulDiv(self)
            else:
                return visitor.visitChildren(self)


    class AddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,i)

        def ADD(self):
            return self.getToken(SeawolfGrammarParser.ADD, 0)
        def SUB(self):
            return self.getToken(SeawolfGrammarParser.SUB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSub" ):
                return visitor.visitAddSub(self)
            else:
                return visitor.visitChildren(self)


    class ModuloContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,i)

        def MOD(self):
            return self.getToken(SeawolfGrammarParser.MOD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModulo" ):
                return visitor.visitModulo(self)
            else:
                return visitor.visitChildren(self)


    class RelationalContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,i)

        def LS(self):
            return self.getToken(SeawolfGrammarParser.LS, 0)
        def GT(self):
            return self.getToken(SeawolfGrammarParser.GT, 0)
        def LE(self):
            return self.getToken(SeawolfGrammarParser.LE, 0)
        def GE(self):
            return self.getToken(SeawolfGrammarParser.GE, 0)
        def EQL(self):
            return self.getToken(SeawolfGrammarParser.EQL, 0)
        def NE(self):
            return self.getToken(SeawolfGrammarParser.NE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelational" ):
                return visitor.visitRelational(self)
            else:
                return visitor.visitChildren(self)


    class NegrealContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SUB(self):
            return self.getToken(SeawolfGrammarParser.SUB, 0)
        def REAL(self):
            return self.getToken(SeawolfGrammarParser.REAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegreal" ):
                return visitor.visitNegreal(self)
            else:
                return visitor.visitChildren(self)


    class LogicalContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,i)

        def AND(self):
            return self.getToken(SeawolfGrammarParser.AND, 0)
        def OR(self):
            return self.getToken(SeawolfGrammarParser.OR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical" ):
                return visitor.visitLogical(self)
            else:
                return visitor.visitChildren(self)


    class ExponentialContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,i)

        def EXP(self):
            return self.getToken(SeawolfGrammarParser.EXP, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExponential" ):
                return visitor.visitExponential(self)
            else:
                return visitor.visitChildren(self)


    class NegintContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SUB(self):
            return self.getToken(SeawolfGrammarParser.SUB, 0)
        def INT(self):
            return self.getToken(SeawolfGrammarParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegint" ):
                return visitor.visitNegint(self)
            else:
                return visitor.visitChildren(self)


    class RealContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REAL(self):
            return self.getToken(SeawolfGrammarParser.REAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReal" ):
                return visitor.visitReal(self)
            else:
                return visitor.visitChildren(self)


    class FloorDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfGrammarParser.ExprContext,i)

        def FLRDIV(self):
            return self.getToken(SeawolfGrammarParser.FLRDIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloorDiv" ):
                return visitor.visitFloorDiv(self)
            else:
                return visitor.visitChildren(self)


    class ListContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def listexpr(self):
            return self.getTypedRuleContext(SeawolfGrammarParser.ListexprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfGrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(SeawolfGrammarParser.INT, 0)
